Moved hessian_eigenvalues, normalize_componentwise, and image_sharpness to image module. Renamed normalize_segmentwise to normalize_componentwise. Significantly improved robustness of label_for_trenches, now removes large components and clusters into trench_sets after cleaning components.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180622.2 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180622.2 Trench detection.ipynb
@@ -40,7 +40,8 @@
     "import param\n",
     "import parambokeh\n",
     "from traitlets import All\n",
-    "import cachetools"
+    "import cachetools\n",
+    "import skimage.morphology"
    ]
   },
   {
@@ -65,7 +66,7 @@
     "# from trench_segmentation.watershed import *\n",
     "# from util import *\n",
     "# from ui import *\n",
-    "import common, trench_detection, util, ui, diagnostics, metadata, workflow"
+    "import common, trench_detection, util, ui, diagnostics, metadata, workflow, image"
    ]
   },
   {
@@ -472,7 +473,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reload(ui)"
+    "df = trench_both2[(trench_both2[\"num_selected_ts\"] > 1) & bad_angle]"
    ]
   },
   {
@@ -481,7 +482,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FrameStream = ui.DataframeStream.define(\"FrameStream\", df2)\n",
+    "FrameStream = ui.DataframeStream.define(\"FrameStream\", df.index.to_frame(index=False))\n",
     "frame_stream = FrameStream()\n",
     "\n",
     "box = ui.dataframe_browser(frame_stream)\n",
@@ -495,7 +496,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.show_frame_info(trench_both2, frame_stream)"
+    "# ui.show_frame_info(trench_both2, frame_stream)"
    ]
   },
   {
@@ -504,8 +505,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = ui.show_grid(df, stream=frame_stream)\n",
-    "g"
+    "# g = ui.show_grid(df, stream=frame_stream)\n",
+    "# g"
    ]
   },
   {
@@ -533,7 +534,108 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, diag, _ = diagnostics.wrap_diagnostics(trench_detection.get_trenches)(\n",
+    "reload(image)\n",
+    "reload(trench_detection)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "frame = workflow.get_nd2_frame(**dict(frame_stream.get_param_values()))\n",
+    "_, diag, _ = diagnostics.wrap_diagnostics(trench_detection.get_trenches)(frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui.show_plot_browser(diag, \"labeling\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui.show_plot_browser(diag, \"label_1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = get_in(\"label_1.trench_rotation.hough_1.diff_h_std\".split(\".\"), diag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = a.Curve.I.data.y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Curve(scipy.ndimage.filters.gaussian_filter1d(y, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.convolve(np., y,mode='valid')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Image processing prototyping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reload(trench_detection)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "_, diag2, _ = diagnostics.wrap_diagnostics(trench_detection.get_trenches)(\n",
     "    workflow.get_nd2_frame(**dict(frame_stream.get_param_values()))\n",
     ")"
    ]
@@ -544,14 +646,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.show_plot_browser(diag, \"label_1.trench_rotation.hough_1\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# QG"
+    "ui.show_plot_browser(diag2, \"labeling\")"
    ]
   },
   {
@@ -560,7 +655,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df3 = df2.copy()"
+    "a = get_in(\"labeling.components\".split(\".\"), diag)"
    ]
   },
   {
@@ -569,8 +664,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "qg = ui.show_grid(df3)\n",
-    "qg"
+    "b = skimage.morphology.label(a.data)"
    ]
   },
   {
@@ -579,7 +673,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reload(ui)"
+    "ui.RevImage(b)"
    ]
   },
   {
@@ -588,7 +682,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "qg = ui.show_frame_info(trench_both2, frame_stream)"
+    "plt.imshow(b == 1)"
    ]
   },
   {
@@ -597,7 +691,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "qg"
+    "Counter(b.flat)"
    ]
   },
   {
@@ -606,9 +700,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx = 5\n",
-    "qg._df.loc[:, 0] = trench_both2.reset_index().iloc[idx]\n",
-    "qg._unfiltered_df.loc[:, 0] = trench_both2.reset_index().iloc[idx]"
+    "np.bincount(a.data.flat)"
    ]
   },
   {
@@ -617,31 +709,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "qg._update_table(triggered_by=\"cell_change\", fire_data_change_event=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_both2.iloc[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "index = 0\n",
-    "column = \"t\"\n",
-    "value = 2\n",
-    "qg._df.loc[index, column] = value\n",
-    "qg._unfiltered_df.loc[index, column] = value\n",
-    "qg._update_table(triggered_by=\"cell_change\", fire_data_change_event=True)\n",
-    "# qg._trigger_df_change_event()"
+    "np.bincount(b.flat)"
    ]
   },
   {
