Was calling normalize_componentwise with far too many labels than existed in the image, this reduced trench detection runtime by 5x-ish.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180623 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180623 Trench detection.ipynb
@@ -545,6 +545,16 @@
    "outputs": [],
    "source": [
     "%%time\n",
+    "frame = workflow.get_nd2_frame(**dict(frame_stream.get_param_values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
     "frame = workflow.get_nd2_frame(**dict(frame_stream.get_param_values()))\n",
     "_, diag, _ = diagnostics.wrap_diagnostics(trench_detection.get_trenches)(frame)"
    ]
@@ -555,7 +565,165 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "img = get_in(\"labeling.image\".split(\".\"), diag).data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_cleaned_components = get_in(\"labeling.num_cleaned_components\".split(\".\"), diag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_components = get_in(\"labeling.cleaned_components\".split(\".\"), diag).data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normalized_image = get_in(\"labeling.normalized_image\".split(\".\"), diag).data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "frame_norm = image.normalize_componentwise(\n",
+    "    img, cleaned_components, label_index=np.arange(num_cleaned_components) + 1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(frame_norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(normalized_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(frame_norm - normalized_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "reload(ui)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame_thresh = frame > skimage.filters.threshold_otsu(frame) * 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(frame_thresh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame_labeled = skimage.morphology.label(frame_thresh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "frame_norm = image.normalize_componentwise(frame, frame_labeled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%lprun -m image image.normalize_componentwise(frame, frame_thresh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(frame_norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reload(trench_detection)\n",
+    "reload(image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%lprun -m trench_detection diagnostics.wrap_diagnostics(trench_detection.get_trenches)(frame)"
    ]
   },
   {
