High-pass filtering works amazingly well as a rotation-invariant detrending. I thought about doing one binary erosion of the thresholded mask but decided against it, left it in commented out.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180623 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180623 Trench detection.ipynb
@@ -545,16 +545,6 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "frame = workflow.get_nd2_frame(**dict(frame_stream.get_param_values()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
     "frame = workflow.get_nd2_frame(**dict(frame_stream.get_param_values()))\n",
     "_, diag, _ = diagnostics.wrap_diagnostics(trench_detection.get_trenches)(frame)"
    ]
@@ -565,174 +555,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = get_in(\"labeling.image\".split(\".\"), diag).data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_cleaned_components = get_in(\"labeling.num_cleaned_components\".split(\".\"), diag)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cleaned_components = get_in(\"labeling.cleaned_components\".split(\".\"), diag).data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "normalized_image = get_in(\"labeling.normalized_image\".split(\".\"), diag).data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "frame_norm = image.normalize_componentwise(\n",
-    "    img, cleaned_components, label_index=np.arange(num_cleaned_components) + 1\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(frame_norm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(normalized_image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(frame_norm - normalized_image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reload(ui)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frame_thresh = frame > skimage.filters.threshold_otsu(frame) * 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(frame_thresh)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(frame)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frame_labeled = skimage.morphology.label(frame_thresh)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "frame_norm = image.normalize_componentwise(frame, frame_labeled)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%lprun -m image image.normalize_componentwise(frame, frame_thresh)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(frame_norm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reload(trench_detection)\n",
-    "reload(image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%lprun -m trench_detection diagnostics.wrap_diagnostics(trench_detection.get_trenches)(frame)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ui.show_plot_browser(diag, \"labeling\", range_xy=True)"
+    "ui.show_plot_browser(diag, \"labeling\")"
    ]
   },
   {
@@ -742,51 +565,6 @@
    "outputs": [],
    "source": [
     "ui.show_plot_browser(diag, \"label_1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = get_in(\"label_1.trench_rotation.hough_1.diff_h_std\".split(\".\"), diag)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = a.Curve.I.data.y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import scipy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.Curve(scipy.ndimage.filters.gaussian_filter1d(y, 2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.convolve(np., y,mode='valid')"
    ]
   },
   {
@@ -842,51 +620,6 @@
    "outputs": [],
    "source": [
     "b = skimage.morphology.label(a.data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ui.RevImage(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(b == 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Counter(b.flat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.bincount(a.data.flat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.bincount(b.flat)"
    ]
   },
   {
