Now use a 2-px gaussian kernel to smooth diff_h_std in hough transform angle finding. Seems to work really well, avoids weird spikes due to aliasing.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180623 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180623 Trench detection.ipynb
@@ -135,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = Client()"
+    "# client = Client()"
    ]
   },
   {
@@ -246,15 +246,6 @@
    "metadata": {},
    "source": [
     "# Reload"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client.upload_file(\"diagnostics.py\")"
    ]
   },
   {
