Fixed bug: finding trench detection threshold from img_highpass instead of raw img seems to have solved most or all period-finding issues.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180623 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180623 Trench detection.ipynb
@@ -105,7 +105,7 @@
    "source": [
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
-    "    walltime=\"5:00:00\",\n",
+    "    walltime=\"1:00:00\",\n",
     "    # job_extra=['-p transfer'],\n",
     "    # job_extra=['--cores-per-socket=8'],\n",
     "    # interface='ib0',\n",
@@ -295,22 +295,20 @@
     "        v: {\n",
     "            channel: {\n",
     "                t: client.submit(\n",
-    "                    trench_detection.get_trenches_diagnostics,\n",
+    "                    trench_detection.get_trenches_diag,\n",
     "                    client.submit(\n",
-    "                        lambda x: x.get_frame_2D(\n",
-    "                            t=t, v=v, c=channels.index(channel), memmap=False\n",
-    "                        ),\n",
-    "                        nd2,\n",
+    "                        workflow._get_nd2_frame, filename, v, channel, t, memmap=False\n",
     "                    ),\n",
+    "                    find_angle_setwise=True,\n",
     "                )\n",
-    "                for t in range(min(sizes[\"t\"], 5000))\n",
+    "                for t in range(min(sizes[\"t\"], 1))\n",
     "            }\n",
     "            for channel in (\"MCHERRY\",)\n",
     "        }\n",
-    "        for v in range(100)\n",
+    "        for v in range(200)\n",
     "    }\n",
-    "    for filename, nd2, sizes, metadata, channels in util.zip_dicts(\n",
-    "        nd2s, nd2_sizes, nd2_metadata, nd2_channels\n",
+    "    for filename, sizes, metadata, channels in util.zip_dicts(\n",
+    "        nd2_sizes, nd2_metadata, nd2_channels\n",
     "    )\n",
     "}"
    ]
@@ -338,6 +336,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -356,7 +361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trench_df2 = util.multi_join(trench_df, nd2_positions)"
+    "trench_df = util.multi_join(trench_df, nd2_positions)"
    ]
   },
   {
@@ -365,14 +370,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trench_df2 = util.multi_join(trench_df2, channels_to_idx)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Compare setwise Hough vs. framewise Hough"
+    "trench_df = util.multi_join(trench_df, channels_to_idx)"
    ]
   },
   {
@@ -381,7 +379,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trench_both = trench_df2.join(trench_df3, how=\"inner\", lsuffix=\"\", rsuffix=\"_sw\")"
+    "bad_angle = trench_df[\"trench_rotation.hough_2.angle\"].abs() > 2\n",
+    "bad_angle.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bad_period = (trench_df[\"trench_anchors.periodogram_2.period\"] - 24).abs() > 2\n",
+    "bad_period.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(bad_angle | bad_period).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(trench_df)"
    ]
   },
   {
@@ -391,7 +418,7 @@
    "outputs": [],
    "source": [
     "num_ts = (\n",
-    "    trench_both.reset_index()\n",
+    "    trench_df.reset_index()\n",
     "    .groupby([\"filename\", \"position\", \"channel\"])\n",
     "    .agg({\"t\": \"count\"})\n",
     "    .rename(columns={\"t\": \"num_ts\"})\n",
@@ -404,28 +431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bad_angle = trench_both[\"trench_rotation.hough_1.angle_sw\"].abs() > 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bad_period = ~(\n",
-    "    (trench_both[\"trench_anchors.periodogram_1.period_sw\"] < 25)\n",
-    "    & (trench_both[\"trench_anchors.periodogram_1.period_sw\"] > 23)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "selected = trench_both[bad_angle]"
+    "selected = trench_df[bad_period]"
    ]
   },
   {
@@ -448,14 +454,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trench_both2 = util.multi_join(util.multi_join(trench_both, num_ts), num_selected_ts)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Prototyping"
+    "trench_df = util.multi_join(util.multi_join(trench_df, num_ts), num_selected_ts)"
    ]
   },
   {
@@ -464,7 +463,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = trench_both2[(trench_both2[\"num_selected_ts\"] > 1) & bad_angle]"
+    "frame_stream.event(_df=selected.index.to_frame(index=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prototyping"
    ]
   },
   {
@@ -487,7 +493,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ui.show_frame_info(trench_both2, frame_stream)"
+    "ui.show_frame_info(trench_df, frame_stream)"
    ]
   },
   {
@@ -507,16 +513,6 @@
    "outputs": [],
    "source": [
     "ui.image_viewer(frame_stream)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = trench_both2[(trench_both2[\"num_selected_ts\"] > 1) & bad_angle]\n",
-    "frame_stream.event(_df=df.index.to_frame(index=False))"
    ]
   },
   {
@@ -546,16 +542,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.show_plot_browser(diag, \"labeling\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ui.show_plot_browser(diag, \"label_1\")"
+    "ui.show_plot_browser(diag)"
    ]
   },
   {
