Increased number of region cross sections in trench detection and added smoothing to region profile. Fixes cases where only mother cells were loaded in each trench and none of the region cross sections intersected them.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180623 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180623 Trench detection.ipynb
@@ -41,7 +41,8 @@
     "import parambokeh\n",
     "from traitlets import All\n",
     "import cachetools\n",
-    "import skimage.morphology"
+    "import skimage.morphology\n",
+    "import scipy"
    ]
   },
   {
@@ -105,7 +106,7 @@
    "source": [
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
-    "    walltime=\"1:00:00\",\n",
+    "    walltime=\"5:00:00\",\n",
     "    # job_extra=['-p transfer'],\n",
     "    # job_extra=['--cores-per-socket=8'],\n",
     "    # interface='ib0',\n",
@@ -268,15 +269,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reload(util)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -311,6 +303,15 @@
     "        nd2_sizes, nd2_metadata, nd2_channels\n",
     "    )\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.cancel(trench_data)"
    ]
   },
   {
@@ -463,7 +464,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frame_stream.event(_df=selected.index.to_frame(index=False))"
+    "# frame_stream.event(_df=selected.index.to_frame(index=False))"
    ]
   },
   {
@@ -479,7 +480,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FrameStream = ui.DataframeStream.define(\"FrameStream\", df.index.to_frame(index=False))\n",
+    "FrameStream = ui.DataframeStream.define(\n",
+    "    \"FrameStream\", selected.index.to_frame(index=False)\n",
+    ")\n",
     "frame_stream = FrameStream()\n",
     "\n",
     "box = ui.dataframe_browser(frame_stream)\n",
@@ -543,6 +546,71 @@
    "outputs": [],
    "source": [
     "ui.show_plot_browser(diag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = get_in(\n",
+    "    \"label_1.trench_anchors.trench_anchor_profile\".split(\".\"), diag\n",
+    ").Curve.I.data[:, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, Pxx = scipy.signal.periodogram(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(f, Pxx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = Pxx.argmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1 / f[idx]"
    ]
   },
   {
