get_nd2_frame_list replaces a lot of notebook boilerplate to set up nd2 file list, now stores all information in a dataframe.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180623 Holoviews linked images.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180623 Holoviews linked images.ipynb
@@ -26,6 +26,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "hv.Curve(np.random.random(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stream = hv.streams.RangeXY()\n",
+    "\n",
+    "arr1 = np.random.rand(100, 100)\n",
+    "arr2 = np.random.rand(100, 100)\n",
+    "\n",
+    "img1 = hv.Image(arr1)\n",
+    "img2 = hv.Image(arr2)\n",
+    "\n",
+    "dmap1 = ds.regrid(img1, streams=[stream], expand=True).options(framewise=True)\n",
+    "dmap2 = ds.regrid(img2, streams=[stream], expand=True).options(framewise=True)\n",
+    "\n",
+    "display(dmap1)\n",
+    "display(dmap2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "img1 = np.random.random((1000, 1000))\n",
     "img2 = np.random.random((1000, 1000))"
    ]
